[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yeet2-brain"
version = "0.1.0"
description = "yeet2 Brain service skeleton"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
crewai = ["crewai"]
dev = ["pytest>=8"]

[project.scripts]
yeet2-brain = "yeet2_brain.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
