[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yeet2-executor"
version = "0.1.0"
description = "yeet2 Executor service skeleton"
requires-python = ">=3.11"
dependencies = [
  "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
yeet2-executor = "yeet2_executor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
